Switch from Remark to MDX

--- a/gatsby/content/hackathons-all-the-time.mdx
+++ b/gatsby/content/hackathons-all-the-time.mdx
@@ -25,7 +25,7 @@ doing it with such ease.
 
 <figure class="pull-right">
   <img src="./img/hackathons/nerf-gun-turret.png" alt="Nerf Gun Turret" width="400" height="275" />
-  <figcaption>They fired this bad boy at judges. It was a sight to behold.</figure>
+  <figcaption>They fired this bad boy at judges. It was a sight to behold.</figcaption>
 </figure>
 
 This lead me to an amazing discovery: **planning leads to success at
