More boring work

--- a/gatsby/content/my-journey-with-adhd.mdx
+++ b/gatsby/content/my-journey-with-adhd.mdx
@@ -61,3 +61,5 @@ I was off.
 # 3. Thriving & Identity Shaking
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Let&#39;s talk about the cycle of <a href="https://twitter.com/hashtag/ADHD?src=hash&amp;ref_src=twsrc%5Etfw">#ADHD</a> burnout.<br /><br />A thread. 💬 <a href="https://t.co/tXW2ad73h6">pic.twitter.com/tXW2ad73h6</a></p>&mdash; Inflow - ADHD (@get_inflow) <a href="https://twitter.com/get_inflow/status/1420061898393853952?ref_src=twsrc%5Etfw">July 27, 2021</a></blockquote>
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">This is honestly what hurts so much. ADHD has this lovely thing called Rejection Sensitive Dysphoria <br>And when I’m comfy w/people I’m myself but I tend to get loud when I’m excited. If I’m told to be quiet, you’ll see me go back inside so quick. This is what goes thru my mind… <a href="https://t.co/a8HJ16utNU">pic.twitter.com/a8HJ16utNU</a></p>&mdash; ⚡️Verra🔜DenFur21⚡️ (@DrunkenDirewolf) <a href="https://twitter.com/DrunkenDirewolf/status/1420152212253204481?ref_src=twsrc%5Etfw">July 27, 2021</a></blockquote>
