Getting closer with regards to spacing

--- a/gatsby/content/cooking-cherry-slab-pie-shrimp-polenta.mdx
+++ b/gatsby/content/cooking-cherry-slab-pie-shrimp-polenta.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Cooking: Cherry Slab Pie & Hot Sauce Shrimp + Cheesy Polenta"
+title: "👨‍🍳 Cherry Slab Pie & Hot Sauce Shrimp + Cheesy Polenta"
 description: The highlight of my weekend was making this pie, let me tell you all about it!
 date: 2021-06-28T04:00
 slug: cooking-cherry-slab-pie-hot-sauce-shrimp-cheesy-polenta
