--- a/gatsby/content/cooking-veggie-burgers.mdx
+++ b/gatsby/content/cooking-veggie-burgers.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Cooking: Veggie Burgers & More"
+title: "👨‍🍳 Veggie Burgers & More"
 description: I'm not even a vegetarian but I love making these veggie burgers
 date: 2021-07-19T04:00
 slug: cooking-veggie-burgers-and-more
