--- a/gatsby/content/adhd.mdx
+++ b/gatsby/content/adhd.mdx
@@ -1,6 +1,6 @@
 ---
-title: ADHD, In 5 Acts
-description: I guess I'm neurodiverse?
+title: ADHD
+description: Let's quickly run through my life and see how ADHD has effected it.
 slug: adhd
 cover: ./img/adhd/fight-thoughts.png
 date: 2021-10-19T05:00
