Add tag filtering to the blog listing page

--- a/gatsby/content/adhd.mdx
+++ b/gatsby/content/adhd.mdx
@@ -4,6 +4,8 @@ description: Let's quickly run through my life and see how ADHD has effected it.
 slug: adhd
 cover: ./img/adhd/fight-thoughts.png
 date: 2021-10-19T05:00
+tags:
+  - mental-health
 ---
 
 > I talk about suicide and depression in this post.
