--- a/gatsby/content/hackathons-all-the-time.mdx
+++ b/gatsby/content/hackathons-all-the-time.mdx
@@ -5,6 +5,8 @@ slug: hackathons-all-the-time
 description: My memories of hackathons I've been to thus far.
 cover: ./img/hackathons/hacksu_at_penn_apps.jpg
 draft: false
+tags:
+  - code
 ---
 
 Over the past two years, I've been to quite a few hackathons
