--- a/gatsby/content/page-speed-shield.mdx
+++ b/gatsby/content/page-speed-shield.mdx
@@ -4,6 +4,8 @@ description: I wanted Google Page Speed Insights to work with GitHub badges, but
 slug: google-page-speed-shield
 cover: ./img/page-speed-shield/cover.png
 date: 2021-06-21T05:00
+tags:
+  - code
 ---
 
 import GitHubFileEmbed from '../src/components/Shared/GitHubFileEmbed'
