--- a/gatsby/content/feelings-api.mdx
+++ b/gatsby/content/feelings-api.mdx
@@ -3,6 +3,9 @@ title: I made an API for my feelings
 description: "What happens when I open myself up as a programming interface?"
 date: 2020-02-24T05:00
 slug: feelings-api
+tags:
+  - mental-health
+  - code
 ---
 
 I have been in therapy since I was 18 years old. At this point, I feel no shame about it and I know that it makes me
