--- a/gatsby/content/hosting-gatsby-on-digitalocean-spaces.mdx
+++ b/gatsby/content/hosting-gatsby-on-digitalocean-spaces.mdx
@@ -4,6 +4,8 @@ description: You shouldn't use DigitalOcean Spaces to host a Gatsby site, but I 
 date: 2021-06-02T05:00
 slug: hosting-gatsby-on-digitalocean-spaces
 cover: ./img/gatsby-digitialocean-spaces/grimace-cover.png
+tags:
+  - code
 ---
 ![Hosting Gatsby on DigitalOcean Spaces will make you grimmace](./img/gatsby-digitialocean-spaces/grimace-cover.png)
 
