--- a/gatsby/content/website-overhaul.mdx
+++ b/gatsby/content/website-overhaul.mdx
@@ -10,14 +10,17 @@ tags:
 
 import GitHubFileEmbed from '../src/components/Shared/GitHubFileEmbed'
 
-* This site is powered by Gatsby
-* I have put in so much work on it because I have been making a lot of Gatsby based sites at work
-* I learned the hard way from a previous employeer that you cannot show off work that you did for them on your
-  portfolio.
-* Also, by having this site in Gatsby and doing really intense stuff with it, I have been able to frontrun some features
-  at work by doing them here.
+In the age of social media and hosted blogs, personal websites don't get the love they deserve. Sure, writing developer
+based content on a site like medium.com or dev.to will get more eyeballs on it than something you make on your own, but
+there is something extremely satisfying in owning every pixel on a site with your name on it. I saw this Tweet the other
+day and it seemed fitting to how I think about personal sites.
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">trying this analogy thing <a href="https://t.co/Q9889HOF3B">pic.twitter.com/Q9889HOF3B</a></p>&mdash; Jane &quot;Not A Twïtter Employee&quot; Manchun Wong (@wongmjane) <a href="https://twitter.com/wongmjane/status/1456360721084674098?ref_src=twsrc%5Etfw">November 4, 2021</a></blockquote>
+
+If we are entering the era of Web3 (which is Soylent in this Tweet, ewww) and it's ethos is trying to revive the
+techno-optimisim and ownership of the Web 1.0 era, what better way to embody this than with an over-engineered personal
+site? Also, I just really love Greek salad (I live in Astoria after all, you walk outside on Ditmars and they force
+Greek salad on you).
 
 # Guiding Principals
 
@@ -25,20 +28,147 @@ import GitHubFileEmbed from '../src/components/Shared/GitHubFileEmbed'
 2. Fetching data at compile time > fetching data at run time
 3. Do a lot and do it fast
 
+# Technology
+
+I this would be a technology blog if I didn't nerd out about tools before describing the cool things I did.
+
+## Gatsby
+
+I moved this site from [Lektor][lektor] to [Gatsby][gatsby] last year while procrastinating on writing a talk about
+[Redux][redux-talk]. At my last job, I was working almost exclusively in Python + Flask, so using a Python based
+generator made sense at the time. But now, at my current job, I'm working a lot more in JavaScript and I wanted my site
+to be more dynamic. I also knew that we were planning on migrating our customer facing sites to a static site generator
+in the near future and Gatsby was high up on the list of possibilities for us to use. By picking it up for my personal
+site, I could learn how to use it beforehand and know exactly what we needed to do.
+
+Turns out that this was a fantastic bet on the future. We are porting around 10 sites at work to Gatsby and because
+I had learned the basics of Gatsby months previous on a single site, I was able to dive into the more complex topics to
+enable us to port many sites at once.
+
+While doing some of these more complex things in a private repo at work, I have been able to take aspects that I have
+learned there and ported them conceptually back to my personal site. I will make note of these learnings as I go.
+
+And finally, it 
+
+### Is Gatsby Any Good?
+
+Oh I have complicated feelings about this! Like all frameworks, Gatsby has made a lot of trade offs to accomplish it's
+goal. **I would say that Gatsby's core goal is to be the Django/Wordpress of static site generators that is capable of
+magical incremental builds.** Let's look at how they accomplish that goal.
+
+1. Your data store for all data while building the site is coming from GraphQL
+2. They have a very through [lifecycle API model][gatsby-lifecycle-apis] that allows for a massive amount of plugins to be added to your site with
+   minimal configuration.
+3. The data in this GraphQL store is used to intelligently determine what pages are needed to be rebuilt when building
+   a page with an established cache.
+
+These three points are all fine on their own but, as they say, the devil is in the details. All of your data that you
+use must be in the GraphQL store, so you must hook into the lifecycle APIs to do this, which forces this data fetching
+to be divorced from your application components. This is actually very similar to the comparison of Redux vs React
+Hooks.
+
+**Furthermore, how these GraphQL queries are executed are very flawed.** Instead of running them when generating the HTML
+after the JS has compiled, they are instead extracted from queries as a Babel transformation and transpiled to a JSON
+file that is read when creating the HTML. This seems like a minor distinction but it means that your GraphQL queries are
+unable to take arguments outside of the template system AND cannot be shared between components because that makes them
+too hard to extract.
+
+Compare this to [Next.js][nextjs], which does all of it's data querying as plain JavaScript functions that can be shared
+freely. It doesn't provide a shared data store that all data needs to go into BUT it is able to do the same incremental
+building that Gatsby does all the same. If I were to do this over, I would probably use Next.js, but I'm fine with
+Gatsby for now.
+
+That said, there are a lot of things that Gatsby does right:
+
+* It's plugin ecosystem is massive and will save you a lot of time from the jump
+* The [image component][gatsby-plugin-image] is extremely good, far better than Next.js's
+* The documentation is fantastic
+
+## Other Technologies
+
+Here's some quick hot takes on some other libraries used in this update:
+
+- [Tailwind CSS][tailwind]: I think it's a little barebones compared to other CSS frameworks. That said, it's theming
+  system and naming conventions made it easy to have consistent spacing, colors, fonts, etc. I do fear that updating
+  styles in the future will be annoying because I will have forgotten it's naming conventions, but that's Future Eli's
+  problem!
+- [Styled Components][styled-components]: I love Styled Components! It has a very intuitive API and I have become
+  a complete CSS in JS fan boi. My personal site does not have a lot of reusable components so I didn't get to use some
+  of it's more complex features, but I would be excited to in a future job!
+- [twin.macro][twin.macro]: This is the glue for Tailwind CSS to Styled Components and it's good! It allowed me to avoid
+  putting Tailwind classes right on my components, which I just could not stomach. It also makes the dev build fail when
+  you provide an invalid Tailwind class.
+
 # Feelings API v2
 
-* Still using the same API as before but now I'm pulling the data at compile time instead of at runtime with React
-  Query.
+![Feelings widget on my homepage](./img/website-update/feelings-widget.png)
+
+Last year, [I made an API to submit diary entries from the Daylio app on my phone][feelings-api]. I am happy to announce
+that I am continuing to use this functionality and I think posting them on my site + Twitter has encouraged me to keep
+doing it.
+
+In the original version of this, I was pulling [the data from the API][feelings-api-endpoint] at runtime using [React Query][react-query]. React
+Query is a fine library and I love using it, but this is a static site so pulling it at runtime is far slower than doing
+it at compile time.
+
+As it turns out, moving this data into Gatsby was very easy using [gatsby-source-custom-api][gatsby-source-custom-api].
+All I needed was the following in my `gatsby-config.js`.
+
+```javascript
+{
+  resolve: 'gatsby-source-custom-api',
+  options: {
+    url: 'https://api.eligundry.com/api/feelings',
+    rootKey: 'feelings',
+    schemas: {
+      feelings: `
+        time: String!
+        mood: String!
+        activities: [String]
+        notes: [String!]
+      `,
+    },
+  },
+},
+```
+
+This allows me to fetch my latest diary entry like so:
+
+<GitHubFileEmbed fileURL="https://github.com/eligundry/eligundry.com/blob/f9aa93ddf5e384e621ebd549b87e4e72defb00e0/gatsby/src/components/Daylio/useLatestFeelings.ts" />
+
+Super easy! In order for this site to be built daily, I added a call to a Netlify build webhook to the API endpoint
+I upload the diary entries to. This build will also generate a dedicated RSS feed that I use IFTTT to post the entry to
+Twitter with. This, in turn, also updates all the other Gatsby sources, which allows things like my Goodreads shelves
+and Listening Widgets to update naturally.
+
+Speaking of those widgets...
 
 # Goodreads Shelves
 
-* I used to use an open source React component to render these shelves.
-  * https://www.npmjs.com/package/react-goodreads-shelf
-* It kept breaking so I eventually submitted a PR to scrape the data straight from Goodreads instead of the API
-* And that kept breaking becase CORS anywhere is super flaky
-* I took that logic and put it into a Gatsby Source so it's fetched at compile time and is super fast in the browser
+![Goodreads bookshelves on my home page](./img/website-update/bookshelves.png)
+
+Similar to the feelings widget, I had a Goodreads widget of what I was reading on the previous version of my website. It
+was using a [React component to pull the data from the Goodreads API][react-goodreads-shelf]. And this was fine until
+[Goodreads announced it was sunsetting it's API][goodbye-goodreads-api]. Not to worry, I realized it was pretty easy to
+pull this data from their HTML and submitted a [suggestion to this component to pull data from the HTML that was
+eventually adopted][rgrs-pr]. But even then, I ran into more issues:
+
+1. Pulling this data at runtime is very slow, even slower now that I'm pulling HTML instead of (relatively) compact XML
+2. Images were at max resolution, much larger than they needed to be given the size of them on the page
+3. The component uses a hosted instance [CORS Anywhere][cors-anywhere] on Heroku that would get rate limited frequently
+
+I threw up my hands and realized that I needed to make a custom Gatsby source to pull this data at compile time. At
+first, I had it living as a file inside my site, but then I started making custom Gatsby source packages at work and
+decided to extract it into my first NPM package!
+
+https://www.npmjs.com/package/@eligundry/gatsby-source-goodreads
+
+One of the added benefits of moving this to compile time is that Gatsby is able to download the cover images and plug it
+into it's image plugin and resize the images to be small and load progressively as the page loads! It's a win win win!
 
 # Listening Homepage Widget
+
+![Last.fm cover on my homepage](./img/website-update/last-fm-cover.png)
 
 * It's very easy to pull a collage of covers from your last.fm listening
 * I just added it to my Gatsby source so that Gatsby Image can do optimizations
@@ -106,5 +236,22 @@ Github is super flexible so I embedded some features into this site that depend 
   into normal DOM operations that can run at anytime.
 
 
+[lektor]: https://www.getlektor.com/
+[gatsby]: https://www.gatsbyjs.com/
+[redux-talk]: /talks/redux-hooks
+[gatsby-lifecycle-apis]: https://www.gatsbyjs.com/docs/conceptual/gatsby-lifecycle-apis/
+[nextjs]: https://nextjs.org/
+[gatsby-plugin-image]: https://www.gatsbyjs.com/plugins/gatsby-plugin-image/
 [emgithub]: https://emgithub.com/
 [postscribe]: https://github.com/krux/postscribe
+[feelings-api]: /blog/feelings-api
+[react-query]: https://react-query.tanstack.com/
+[feelings-api-endpoint]: https://api.eligundry.com/api/feelings
+[gatsby-source-custom-api]: https://www.gatsbyjs.com/plugins/gatsby-source-custom-api/
+[react-goodreads-shelf]: https://www.npmjs.com/package/react-goodreads-shelf
+[goodbye-goodreads-api]: https://www.goodreads.com/topic/show/21788520-api-deprecation
+[rgrs-pr]: https://github.com/kylekarpack/react-goodreads-shelf/issues/13#issuecomment-756871730
+[cors-anywhere]: https://github.com/Rob--W/cors-anywhere
+[tailwind]: https://tailwindcss.com/
+[styled-components]: https://styled-components.com/
+[twin.macro]: https://github.com/ben-rogerson/twin.macro
