Add a super fun & dynamic background to the site

--- a/gatsby/content/website-overhaul.mdx
+++ b/gatsby/content/website-overhaul.mdx
@@ -1,7 +1,7 @@
 ---
 title: Can I Brag About This Site For A Second?
 description: I have put a lot of work into the newest version of this site and I want to tell you about it.
-slug: website-overhaul
+slug: changelog-2021-website-redesign
 cover: ./img/adhd/fight-thoughts.png
 date: 2021-11-02T05:00
 tags:
@@ -181,9 +181,14 @@ into it's image plugin and resize the images to be small and load progressively 
 * I want to add a 3rd widget to this section showing the upcoming concerts I'm going to. I can pull this data from
   Songkick, they just need to approve me for an API key. Maybe I'll make a Gatsby Source for that as well!
 
-# Dark Theme Toggle
+# Design
 
-* Controllable at the OS and website level with the little toggle
+* Dark Theme
+  * Controllable at the OS and website level with the little toggle
+  * Components react to color theme changes, even external ones
+* Fluid pattern background
+  * Shamelessly stolen from https://codepen.io/georgedoescode/pen/YzxrRZe
+  * Can be regenerated with the button on the bottom right corner of the page
 
 # Git Based Modified Timestamps
 
