Write about my distaste of the blockchain

--- a/gatsby/content/website-overhaul.mdx
+++ b/gatsby/content/website-overhaul.mdx
@@ -22,6 +22,10 @@ techno-optimisim and ownership of the Web 1.0 era, what better way to embody thi
 site? Also, I just really love Greek salad (I live in Astoria after all, you walk outside on Ditmars and they force
 Greek salad on you).
 
+(As an aside, I find all of Web3 and blockchain stuff disgusting. I have no money in any of that stuff because I object
+on environmental issues and that most of it reeks of pump and dump schemes. That said, I am happy for anything that
+pushes the web pendulum back in the direction of user's owning pixels attached to their name.)
+
 # Guiding Principals
 
 1. My site must be dynamic enough to reflect my personality
