Alright, this is good enough

--- a/gatsby/content/2021-website-redesign.mdx
+++ b/gatsby/content/2021-website-redesign.mdx
@@ -1,8 +1,8 @@
 ---
 title: Can I Brag About This Site For A Second?
 description: I have put a lot of work into the newest version of this site and I want to tell you about it.
-slug: changelog-2021-website-redesign
-cover: ./img/adhd/fight-thoughts.png
+slug: 2021-website-redesign
+cover: ./img/website-update/desktop-100.png
 date: 2021-11-02T05:00
 tags:
   - code
@@ -37,8 +37,6 @@ pushes the web pendulum back in the direction of user's owning pixels attached t
 I this would be a technology blog if I didn't nerd out about tools before describing the cool things I did.
 
 ## Gatsby
-
-![Gatsby Logo](./img/website-update/gatsby-logo.png)
 
 I moved this site from [Lektor][lektor] to [Gatsby][gatsby] last year while procrastinating on writing a talk about
 [Redux][redux-talk]. At my last job, I was working almost exclusively in Python + Flask, so using a Python based
@@ -336,7 +334,8 @@ much sleep over this.
 
 # Conclusion
 
-TBD
+I have a whole other blog post/talk to write about the resume on this site. So much content from such useless navel
+gazing! In any case, I hope you like this site and thank you for reading this novel!
 
 [lektor]: https://www.getlektor.com/
 [gatsby]: https://www.gatsbyjs.com/
